--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
             <li><a href="#contact">I am Contact link and my href value is #contact</a></li>
         </ul>
     </header>
-    
+    <section id="education" class="container">
+    <h2>Education</h2>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Year</th>
+                <th>Semester</th>
+                <th>Code</th>
+                <th>Subject Name</th>
+                <th>Credit</th>
+            </tr>
+        </thead>
+        <tbody id="course-table"></tbody>
+    </table>
+    </section>
     <div class="page-content">
         <img src="image.png" alt="A star image">
         <p>I am an image and I'm all by myself</p>
