--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        fetch('https://github.com/RovicAlmonia/html-css/blob/main/courses.json')
+        fetch('https://raw.githubusercontent.com/RovicAlmonia/html-css/main/courses.json')
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
