--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <th>Credit</th>
                 </tr>
             </thead>
-            <tbody id="course-table"></tbody>
+            <tbody id="course-table"></tbody> <!-- Corrected ID -->
         </table>
     </section>
 
@@ -42,51 +42,139 @@
         <h1>Hello! I am a text with the largest heading</h1>
 
         <div id="about">I am division with id equal to about</div>
-        <div id="edu-content">I am division with id equal to edu-content</div> <!-- Changed ID to avoid conflict -->
+        <div id="edu-content">I am division with id equal to edu-content</div> 
         <div id="skills">I am division with id equal to skills</div>
         <div id="portfolio">I am division with id equal to portfolio</div>
         <div id="contact">I am division with id equal to contact</div>
     </div>
 
     <footer>
-        <p>I am a footer the last section of this page</p>
+        <p>I am a footer, the last section of this page</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         fetch('https://raw.githubusercontent.com/RovicAlmonia/html-css/main/courses.json')
-    .then(response => {
-        if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
-        }
-        return response.json();
-    })
-    .then(data => {
-        console.log('Fetched Course Data:', data); // Debugging
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            return response.json();
+        })
+        .then(data => {
+            console.log('Fetched Course Data:', data); // Debugging
 
-        const coursesTable = document.getElementById('courses-table');
-        coursesTable.innerHTML = ''; // Clear existing table data
+            const courseTable = document.getElementById('course-table'); // Corrected ID
+            courseTable.innerHTML = ''; // Clear existing table data
 
-        if (!data.courses || data.courses.length === 0) {
-            console.error('No courses found in JSON data');
-            return;
-        }
+            if (!data.courses || data.courses.length === 0) {
+                console.error('No courses found in JSON data');
+                return;
+            }
 
-        data.courses.forEach(course => {
-            let row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${courses.year_level}</td>
-                <td>${courses.sem}</td>
-                <td>${courses.code}</td>
-                <td>${courses.description}</td>
-                <td>${courses.credit}</td>
-            `;
-            courseTable.appendChild(row);
-        });
-    })
-    .catch(error => console.error('Error fetching courses.json:', error));
-
+            data.courses.forEach(course => {
+                let row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${course.year_level}</td>
+                    <td>${course.sem}</td>
+                    <td>${course.code}</td>
+                    <td>${course.description}</td>
+                    <td>${course.credit}</td>
+                `;
+                courseTable.appendChild(row);
+            });
+        })
+        .catch(error => console.error('Error fetching courses.json:', error));
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expected Output</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking CSS file -->
+</head>
+<body>
+    <header>
+        <p>I am header with an unordered list of hyperlinks</p>
+        <ul>
+            <li><a href="#about">I am About link and my href value is #about</a></li>
+            <li><a href="#education">I am Education link and my href value is #education</a></li>
+            <li><a href="#skills">I am Skills link and my href value is #skills</a></li>
+            <li><a href="#portfolio">I am Portfolio link and my href value is #portfolio</a></li>
+            <li><a href="#contact">I am Contact link and my href value is #contact</a></li>
+        </ul>
+    </header>
 
+    <section id="education" class="container">
+        <h2>Education</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Year</th>
+                    <th>Semester</th>
+                    <th>Code</th>
+                    <th>Subject Name</th>
+                    <th>Credit</th>
+                </tr>
+            </thead>
+            <tbody id="course-table"></tbody> <!-- Corrected ID -->
+        </table>
+    </section>
+
+    <div class="page-content">
+        <img src="image.png" alt="A star image">
+        <p>I am an image and I'm all by myself</p>
+        <p>I am division with class equal to page-content that encloses all other division elements below</p>
+
+        <h1>Hello! I am a text with the largest heading</h1>
+
+        <div id="about">I am division with id equal to about</div>
+        <div id="edu-content">I am division with id equal to edu-content</div> 
+        <div id="skills">I am division with id equal to skills</div>
+        <div id="portfolio">I am division with id equal to portfolio</div>
+        <div id="contact">I am division with id equal to contact</div>
+    </div>
+
+    <footer>
+        <p>I am a footer, the last section of this page</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        fetch('https://raw.githubusercontent.com/RovicAlmonia/html-css/main/courses.json')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            return response.json();
+        })
+        .then(data => {
+            console.log('Fetched Course Data:', data); // Debugging
+
+            const courseTable = document.getElementById('course-table'); // Corrected ID
+            courseTable.innerHTML = ''; // Clear existing table data
+
+            if (!data.courses || data.courses.length === 0) {
+                console.error('No courses found in JSON data');
+                return;
+            }
+
+            data.courses.forEach(course => {
+                let row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${course.year_level}</td>
+                    <td>${course.sem}</td>
+                    <td>${course.code}</td>
+                    <td>${course.description}</td>
+                    <td>${course.credit}</td>
+                `;
+                courseTable.appendChild(row);
+            });
+        })
+        .catch(error => console.error('Error fetching courses.json:', error));
+    </script>
+</body>
+</html>
